feat: added consultation of the price of the liter of milk paid to the farmer, given a farm code and a parameter month.
